// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composeCalendarScroll should compose a nav, header, grid and date component correctly 1`] = `
<div
  className="bpk-calendar bpk-calendar-scroll--fixed-width"
>
  <Header
    className=""
    daysOfWeek={
      Array [
        Object {
          "index": 0,
          "isWeekend": true,
          "name": "Sunday",
          "nameAbbr": "Sun",
        },
        Object {
          "index": 1,
          "isWeekend": false,
          "name": "Monday",
          "nameAbbr": "Mon",
        },
        Object {
          "index": 2,
          "isWeekend": false,
          "name": "Tuesday",
          "nameAbbr": "Tue",
        },
        Object {
          "index": 3,
          "isWeekend": false,
          "name": "Wednesday",
          "nameAbbr": "Wed",
        },
        Object {
          "index": 4,
          "isWeekend": false,
          "name": "Thursday",
          "nameAbbr": "Thu",
        },
        Object {
          "index": 5,
          "isWeekend": false,
          "name": "Friday",
          "nameAbbr": "Fri",
        },
        Object {
          "index": 6,
          "isWeekend": true,
          "name": "Saturday",
          "nameAbbr": "Sat",
        },
      ]
    }
    showWeekendSeparator={true}
    weekStartsOn={1}
  />
  <Grid
    DateComponent="Date"
    className=""
    dateModifiers={Object {}}
    daysOfWeek={
      Array [
        Object {
          "index": 0,
          "isWeekend": true,
          "name": "Sunday",
          "nameAbbr": "Sun",
        },
        Object {
          "index": 1,
          "isWeekend": false,
          "name": "Monday",
          "nameAbbr": "Mon",
        },
        Object {
          "index": 2,
          "isWeekend": false,
          "name": "Tuesday",
          "nameAbbr": "Tue",
        },
        Object {
          "index": 3,
          "isWeekend": false,
          "name": "Wednesday",
          "nameAbbr": "Wed",
        },
        Object {
          "index": 4,
          "isWeekend": false,
          "name": "Thursday",
          "nameAbbr": "Thu",
        },
        Object {
          "index": 5,
          "isWeekend": false,
          "name": "Friday",
          "nameAbbr": "Fri",
        },
        Object {
          "index": 6,
          "isWeekend": true,
          "name": "Saturday",
          "nameAbbr": "Sat",
        },
      ]
    }
    focusedDate={null}
    formatDateFull={[Function]}
    formatMonth={[Function]}
    markOutsideDays={true}
    markToday={true}
    maxDate={2010-03-15T00:00:00.000Z}
    minDate={2010-02-15T00:00:00.000Z}
    months={undefined}
    onDateClick={[Function]}
    onDateKeyDown={[Function]}
    preventKeyboardFocus={false}
    selectedDate={null}
    showWeekendSeparator={true}
    weekStartsOn={1}
  />
</div>
`;

exports[`composeCalendarScroll should render with "fixedWidth" set to false 1`] = `
<div
  className="bpk-calendar"
>
  <Header
    className=""
    daysOfWeek={
      Array [
        Object {
          "index": 0,
          "isWeekend": true,
          "name": "Sunday",
          "nameAbbr": "Sun",
        },
        Object {
          "index": 1,
          "isWeekend": false,
          "name": "Monday",
          "nameAbbr": "Mon",
        },
        Object {
          "index": 2,
          "isWeekend": false,
          "name": "Tuesday",
          "nameAbbr": "Tue",
        },
        Object {
          "index": 3,
          "isWeekend": false,
          "name": "Wednesday",
          "nameAbbr": "Wed",
        },
        Object {
          "index": 4,
          "isWeekend": false,
          "name": "Thursday",
          "nameAbbr": "Thu",
        },
        Object {
          "index": 5,
          "isWeekend": false,
          "name": "Friday",
          "nameAbbr": "Fri",
        },
        Object {
          "index": 6,
          "isWeekend": true,
          "name": "Saturday",
          "nameAbbr": "Sat",
        },
      ]
    }
    showWeekendSeparator={true}
    weekStartsOn={1}
  />
  <Grid
    DateComponent="Date"
    className=""
    dateModifiers={Object {}}
    daysOfWeek={
      Array [
        Object {
          "index": 0,
          "isWeekend": true,
          "name": "Sunday",
          "nameAbbr": "Sun",
        },
        Object {
          "index": 1,
          "isWeekend": false,
          "name": "Monday",
          "nameAbbr": "Mon",
        },
        Object {
          "index": 2,
          "isWeekend": false,
          "name": "Tuesday",
          "nameAbbr": "Tue",
        },
        Object {
          "index": 3,
          "isWeekend": false,
          "name": "Wednesday",
          "nameAbbr": "Wed",
        },
        Object {
          "index": 4,
          "isWeekend": false,
          "name": "Thursday",
          "nameAbbr": "Thu",
        },
        Object {
          "index": 5,
          "isWeekend": false,
          "name": "Friday",
          "nameAbbr": "Fri",
        },
        Object {
          "index": 6,
          "isWeekend": true,
          "name": "Saturday",
          "nameAbbr": "Sat",
        },
      ]
    }
    focusedDate={null}
    formatDateFull={[Function]}
    formatMonth={[Function]}
    markOutsideDays={true}
    markToday={true}
    maxDate={2010-03-15T00:00:00.000Z}
    minDate={2010-02-15T00:00:00.000Z}
    months={undefined}
    onDateClick={[Function]}
    onDateKeyDown={[Function]}
    preventKeyboardFocus={false}
    selectedDate={null}
    showWeekendSeparator={true}
    weekStartsOn={1}
  />
</div>
`;

exports[`composeCalendarScroll should render with custom className prop correctly 1`] = `
<div
  className="bpk-calendar my-custom-class bpk-calendar-scroll--fixed-width"
>
  <Header
    className=""
    daysOfWeek={
      Array [
        Object {
          "index": 0,
          "isWeekend": true,
          "name": "Sunday",
          "nameAbbr": "Sun",
        },
        Object {
          "index": 1,
          "isWeekend": false,
          "name": "Monday",
          "nameAbbr": "Mon",
        },
        Object {
          "index": 2,
          "isWeekend": false,
          "name": "Tuesday",
          "nameAbbr": "Tue",
        },
        Object {
          "index": 3,
          "isWeekend": false,
          "name": "Wednesday",
          "nameAbbr": "Wed",
        },
        Object {
          "index": 4,
          "isWeekend": false,
          "name": "Thursday",
          "nameAbbr": "Thu",
        },
        Object {
          "index": 5,
          "isWeekend": false,
          "name": "Friday",
          "nameAbbr": "Fri",
        },
        Object {
          "index": 6,
          "isWeekend": true,
          "name": "Saturday",
          "nameAbbr": "Sat",
        },
      ]
    }
    showWeekendSeparator={true}
    weekStartsOn={1}
  />
  <Grid
    DateComponent="Date"
    className=""
    dateModifiers={Object {}}
    daysOfWeek={
      Array [
        Object {
          "index": 0,
          "isWeekend": true,
          "name": "Sunday",
          "nameAbbr": "Sun",
        },
        Object {
          "index": 1,
          "isWeekend": false,
          "name": "Monday",
          "nameAbbr": "Mon",
        },
        Object {
          "index": 2,
          "isWeekend": false,
          "name": "Tuesday",
          "nameAbbr": "Tue",
        },
        Object {
          "index": 3,
          "isWeekend": false,
          "name": "Wednesday",
          "nameAbbr": "Wed",
        },
        Object {
          "index": 4,
          "isWeekend": false,
          "name": "Thursday",
          "nameAbbr": "Thu",
        },
        Object {
          "index": 5,
          "isWeekend": false,
          "name": "Friday",
          "nameAbbr": "Fri",
        },
        Object {
          "index": 6,
          "isWeekend": true,
          "name": "Saturday",
          "nameAbbr": "Sat",
        },
      ]
    }
    focusedDate={null}
    formatDateFull={[Function]}
    formatMonth={[Function]}
    markOutsideDays={true}
    markToday={true}
    maxDate={2010-03-15T00:00:00.000Z}
    minDate={2010-02-15T00:00:00.000Z}
    months={undefined}
    onDateClick={[Function]}
    onDateKeyDown={[Function]}
    preventKeyboardFocus={false}
    selectedDate={null}
    showWeekendSeparator={true}
    weekStartsOn={1}
  />
</div>
`;

exports[`composeCalendarScroll should render without header element 1`] = `
<div
  className="bpk-calendar bpk-calendar-scroll--fixed-width"
>
  <Grid
    DateComponent="Date"
    className=""
    dateModifiers={Object {}}
    daysOfWeek={
      Array [
        Object {
          "index": 0,
          "isWeekend": true,
          "name": "Sunday",
          "nameAbbr": "Sun",
        },
        Object {
          "index": 1,
          "isWeekend": false,
          "name": "Monday",
          "nameAbbr": "Mon",
        },
        Object {
          "index": 2,
          "isWeekend": false,
          "name": "Tuesday",
          "nameAbbr": "Tue",
        },
        Object {
          "index": 3,
          "isWeekend": false,
          "name": "Wednesday",
          "nameAbbr": "Wed",
        },
        Object {
          "index": 4,
          "isWeekend": false,
          "name": "Thursday",
          "nameAbbr": "Thu",
        },
        Object {
          "index": 5,
          "isWeekend": false,
          "name": "Friday",
          "nameAbbr": "Fri",
        },
        Object {
          "index": 6,
          "isWeekend": true,
          "name": "Saturday",
          "nameAbbr": "Sat",
        },
      ]
    }
    focusedDate={null}
    formatDateFull={[Function]}
    formatMonth={[Function]}
    markOutsideDays={true}
    markToday={true}
    maxDate={2010-03-15T00:00:00.000Z}
    minDate={2010-02-15T00:00:00.000Z}
    months={undefined}
    onDateClick={[Function]}
    onDateKeyDown={[Function]}
    preventKeyboardFocus={false}
    selectedDate={null}
    showWeekendSeparator={true}
    weekStartsOn={1}
  />
</div>
`;
